fixing alignment

--- a/hi_aloha/styles/site-plan.css
+++ b/hi_aloha/styles/site-plan.css
@@ -124,6 +124,9 @@ p .headline{
   background-color: var(--accent2-color);
 }
 
+p.bottom {
+  text-align: center;
+}
 p.colored {
   background-color: var(--paragraph-background-color);
   color: var(--paragraph-color-on-color);
